botoes-dados-pericias
Adicionei botões que verificam o valor da perícia e rolam o dado 1d20 adicionando o valor

--- a/Plugins/Sheets/DnD5e_Daniel_e_John/fichaDnD5.lfm
+++ b/Plugins/Sheets/DnD5e_Daniel_e_John/fichaDnD5.lfm
@@ -25,5 +25,9 @@
 				<textEditor align="client" field="outros.anotacoes" class="transparente"  margins="{left=2, right=2, top=2, bottom=2}"/>
 			</rectangle>
 		</tab>
+
+		<tab title="Ações">
+			<import file="acoes.xml"/>
+		</tab>		
 	</tabControl>		
 </form>
